2007-08-08  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #464639

	* addressbook/e-book-backend-exchange.c:
	(e_book_backend_exchange_get_contact): Implement the get_contact
	handler for remote mode.

2007-08-07  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #347930

	* camel/camel-exchange-journal.c: (exchange_entry_write),
	(exchange_entry_play):
	* camel/camel-exchange-store.c: (stub_notification):
	* camel/camel-stub.c: (stub_send_internal):
	* mail/mail-stub.c: (connection_handler), (mail_stub_read_args),
	(mail_stub_return_data):
	Changed g_assert_not_reached to g_critical.

2007-07-31  Veerapuram Varadhan <vvaradhan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.11.6.1 release
	
2007-07-31  Veerapuram Varadhan  <vvaradhan@novell.com>

	* camel/camel-exchange-folder.c: (get_message): Check for Sender
	and Mailing list fields, if Sender alone exist, add
	X-Evolution-Mail-From-Delegate header that would be handled by
	Evolution, while formatting the message.

	* camel/camel-exchange-summary.c: Disable d(x)

2007-07-30  Veerapuram Varadhan <vvaradhan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.11.6 release
	
2007-07-30  Chenthill Palanisamy  <pchenthill@novell.com>

	* camel/camel-exchange-folder.c: (get_message): Removed all the 
	unnecessary piece of code. 

	Committing on behalf of Bharath Acharya <abharath@novell.com>	

2007-07-27  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in:
	Collect all the required package versions in one place and
	explicitly require GTK+ 2.10 or higher.  (#380534)

2007-07-09  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.11.5 release

2007-09-09  Matthew Barnes  <mbarnes@redhat.com>

	* calendar/e-cal-backend-exchange-calendar.c
	(process_delegated_cal_object), (find_attendee_prop):
	* camel/camel-exchange-folder.c (get_message):
	* mail/mail-stub-exchange.c (mse_get_folder_online_sync_updates):