@@ -1,5 +1,10 @@
 2007-08-08  Srinivasa Ragavan  <sragavan@novell.com>
 
+	* addressbook/e-book-backend-gal.c: (dosearch): Fix for partial GAL
+	retrieval.
+
+2007-08-08  Srinivasa Ragavan  <sragavan@novell.com>
+
 	** Fix for bug #464639
 
 	* addressbook/e-book-backend-exchange.c:
